team pic cutoff fix

--- a/static/assets/css/overwrite.css
+++ b/static/assets/css/overwrite.css
@@ -316,7 +316,9 @@ section .game:first-of-type{
 
 .teampic{
     float: right;
-    width: 500px;
+    max-width: 480px;
+    display: block;
+    margin:0 auto;
 }
 
 .cleardiv{
